--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
     django111: Django>=1.11a1,<2.0
-    django20: Django==2.0b1
+    django20: Django>=2.0,<2.1
     -rrequirements.txt
 commands = ./runtests.py {posargs}
 
