Linting - add missed comma isort config (#154)

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ universal = 1
 max-line-length = 120
 
 [isort]
+include_trailing_comma = True
 known_first_party = nexus,testapp
 known_third_party = django
 line_length = 120
