--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     py{27,36}-django{18,19,110,111},
-    py36-django{20},
+    py36-django{20,21},
     py{27,36}-codestyle
 
 [testenv]
@@ -14,6 +14,7 @@ deps =
     django110: Django>=1.10,<1.11
     django111: Django>=1.11a1,<2.0
     django20: Django>=2.0,<2.1
+    django21: Django>=2.1a1,<2.2
     -rrequirements.txt
 commands = ./runtests.py {posargs}
 
