--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #
 atomicwrites==1.1.5       # via pytest
 attrs==18.1.0             # via pytest
-beautifulsoup4==4.6.1
+beautifulsoup4==4.6.3
 configparser==3.5.0       # via flake8
 coverage==4.5.1           # via pytest-cov
 docutils==0.14
@@ -20,13 +20,14 @@ mccabe==0.6.1             # via flake8
 more-itertools==4.3.0     # via pytest
 multilint==2.3.0
 pathlib2==2.3.2           # via pytest
+pathlib==1.0.1            # via pytest-django
 pluggy==0.7.1             # via pytest
 py==1.5.4                 # via pytest
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.6.0           # via flake8
 pygments==2.2.0
 pytest-cov==2.5.1
-pytest-django==3.3.3
+pytest-django==3.4.1
 pytest==3.7.1
 pytz==2018.5
 scandir==1.9.0            # via pathlib2
