--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@
 #
 atomicwrites==1.2.1       # via pytest
 attrs==18.2.0             # via pytest
-beautifulsoup4==4.6.3
+backports.functools-lru-cache==1.5  # via soupsieve
+beautifulsoup4==4.7.0
 configparser==3.5.0       # via flake8
 coverage==4.5.2           # via pytest-cov
 docutils==0.14
@@ -31,3 +32,4 @@ pytest==4.0.2
 pytz==2018.7
 scandir==1.9.0            # via pathlib2
 six==1.12.0               # via more-itertools, multilint, pathlib2, pytest
+soupsieve==1.6.2          # via beautifulsoup4
