--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
 envlist =
-    py{27,36}-django{18,19,110,111},
-    py36-django{20,21},
-    py{27,36}-codestyle
+    py3-django{18,19,110,111,20,21},
+    py3-codestyle
 
 [testenv]
 setenv =
@@ -18,13 +17,7 @@ deps =
     -rrequirements.txt
 commands = ./runtests.py {posargs}
 
-[testenv:py27-codestyle]
-deps = -rrequirements.txt
-# setup.py check broken on travis python 2.7
-skip_install = true
-commands = multilint --skip setup.py
-
-[testenv:py36-codestyle]
+[testenv:py3-codestyle]
 deps = -rrequirements.txt
 skip_install = true
 commands = multilint
