--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,4 @@ pytest==4.4.1
 pytz==2019.1
 six==1.12.0               # via multilint, pytest
 soupsieve==1.9.1          # via beautifulsoup4
+sqlparse==0.3.0
