Update config files and dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,11 @@
 [flake8]
 max-line-length = 120
+exclude =
+    .git
+    __pycache__
+    */migrations/*
+    env
+    .tox
 
 [isort]
 include_trailing_comma = True
@@ -7,13 +13,9 @@ known_first_party = nexus,testapp
 known_third_party = django
 line_length = 120
 multi_line_output = 5
-not_skip = __init__.py
+profile = black
+honor_noqa = true
+
 
 [metadata]
 license_file = LICENSE
-
-[tool:multilint]
-paths = nexus
-        runtests.py
-        setup.py
-        tests
