--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,21 @@
 [tox]
 envlist =
-    py3-django{111,20,21,22},
-    py3-codestyle
+    py{38,39,310}-django{32,42},
+    py38-codestyle
 
 [testenv]
 setenv =
     PYTHONDONTWRITEBYTECODE=1
-install_command = pip install --no-deps {opts} {packages}
+; install_command = pip install --no-deps {opts} {packages}
 deps =
-    django111: Django>=1.11a1,<2.0
-    django20: Django>=2.0,<2.1
-    django21: Django>=2.1,<2.2
-    django22: Django>=2.2,<2.3
+    django32: Django>=3.2,<4.0
+    django42: Django>=4.2,<5.0
     -rrequirements.txt
-commands = ./runtests.py {posargs}
+commands = python runtests.py {posargs}
 
-[testenv:py3-codestyle]
+[testenv:py38-codestyle]
 deps = -rrequirements.txt
-skip_install = true
-commands = multilint
+commands =
+    black -S nexus tests runtests.py setup.py
+    isort nexus tests runtests.py setup.py
+    flake8
